[gd_scene load_steps=35 format=3 uid="uid://cdoobd01ht1qo"]

[ext_resource type="Script" path="res://characters/npcs/kid_zombie.gd" id="1_wtcdx"]
[ext_resource type="PackedScene" uid="uid://26pgbqlximxx" path="res://characters/chat_icon.tscn" id="2_5g3q4"]
[ext_resource type="Texture2D" uid="uid://ch0uqncjddnqc" path="res://assets/art/characters/npcs/kid_zom.png" id="2_ipxlw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk2xe"]
size = Vector2(24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsnon"]
atlas = ExtResource("2_ipxlw")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4eg"]
atlas = ExtResource("2_ipxlw")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hpub"]
atlas = ExtResource("2_ipxlw")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mswc"]
atlas = ExtResource("2_ipxlw")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42uj8"]
atlas = ExtResource("2_ipxlw")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3abg1"]
atlas = ExtResource("2_ipxlw")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t8dh"]
atlas = ExtResource("2_ipxlw")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiuig"]
atlas = ExtResource("2_ipxlw")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fgxc"]
atlas = ExtResource("2_ipxlw")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnjpc"]
atlas = ExtResource("2_ipxlw")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjcri"]
atlas = ExtResource("2_ipxlw")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bsce"]
atlas = ExtResource("2_ipxlw")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acdrc"]
atlas = ExtResource("2_ipxlw")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgtds"]
atlas = ExtResource("2_ipxlw")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fj2i"]
atlas = ExtResource("2_ipxlw")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_174nk"]
atlas = ExtResource("2_ipxlw")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6v4m"]
atlas = ExtResource("2_ipxlw")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apsx8"]
atlas = ExtResource("2_ipxlw")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fhhh"]
atlas = ExtResource("2_ipxlw")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_psfn7"]
atlas = ExtResource("2_ipxlw")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gchhm"]
atlas = ExtResource("2_ipxlw")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hb1r"]
atlas = ExtResource("2_ipxlw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3akb3"]
atlas = ExtResource("2_ipxlw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x8w3"]
atlas = ExtResource("2_ipxlw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_si43j"]
atlas = ExtResource("2_ipxlw")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtabo"]
atlas = ExtResource("2_ipxlw")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi5g7"]
atlas = ExtResource("2_ipxlw")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gktbf"]
atlas = ExtResource("2_ipxlw")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifuqy"]
atlas = ExtResource("2_ipxlw")
region = Rect2(48, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f8uvn"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_nsnon")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ct4eg")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_2hpub")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_3mswc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42uj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3abg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t8dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiuig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fgxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnjpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjcri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bsce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acdrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgtds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fj2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_174nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6v4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apsx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fhhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psfn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gchhm")
}],
"loop": false,
"name": &"change_costume",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hb1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3akb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x8w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si43j")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtabo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi5g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gktbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifuqy")
}],
"loop": true,
"name": &"new_idle",
"speed": 4.0
}]

[node name="kid_zombie" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wtcdx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12, -4)
shape = SubResource("RectangleShape2D_nk2xe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_f8uvn")
animation = &"new_idle"
autoplay = "default"

[node name="chat_icon" parent="." instance=ExtResource("2_5g3q4")]
position = Vector2(8, -16)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
